[gd_scene load_steps=30 format=2]

[ext_resource path="res://audio/voicelines/monster/it_is_here.ogg" type="AudioStream" id=1]
[ext_resource path="res://audio/voicelines/monster/do_you_hear_it.ogg" type="AudioStream" id=2]
[ext_resource path="res://audio/voicelines/monster/its_getting_closer.ogg" type="AudioStream" id=3]
[ext_resource path="res://audio/voicelines/monster/run.ogg" type="AudioStream" id=4]
[ext_resource path="res://scenes/Monster/Monster.gd" type="Script" id=5]
[ext_resource path="res://audio/voicelines/monster/where_is_the_light.ogg" type="AudioStream" id=6]
[ext_resource path="res://audio/voicelines/monster/can_you_feel_its_presence.ogg" type="AudioStream" id=7]
[ext_resource path="res://audio/voicelines/monster/it_is_hungry.ogg" type="AudioStream" id=8]
[ext_resource path="res://audio/voicelines/monster/coming_to_get_you.ogg" type="AudioStream" id=9]
[ext_resource path="res://audio/voicelines/monster/i_dont_want_to_go_on.ogg" type="AudioStream" id=10]
[ext_resource path="res://audio/voicelines/monster/i_cant_feel_anything.ogg" type="AudioStream" id=11]
[ext_resource path="res://audio/voicelines/monster/i_cant_see.ogg" type="AudioStream" id=12]
[ext_resource path="res://audio/voicelines/monster/despair.ogg" type="AudioStream" id=13]
[ext_resource path="res://audio/voicelines/monster/please.ogg" type="AudioStream" id=14]
[ext_resource path="res://audio/voicelines/monster/everything_hurts.ogg" type="AudioStream" id=15]
[ext_resource path="res://audio/voicelines/monster/its_pointless.ogg" type="AudioStream" id=16]
[ext_resource path="res://audio/voicelines/monster/the_whispering_void.ogg" type="AudioStream" id=17]
[ext_resource path="res://audio/voicelines/monster/listen_to_me.ogg" type="AudioStream" id=18]
[ext_resource path="res://audio/voicelines/monster/im_in_pain.ogg" type="AudioStream" id=19]
[ext_resource path="res://audio/voicelines/monster/im_cold.ogg" type="AudioStream" id=20]
[ext_resource path="res://audio/voicelines/monster/come_to_me.ogg" type="AudioStream" id=21]
[ext_resource path="res://audio/voicelines/monster/i_am_scared.ogg" type="AudioStream" id=22]
[ext_resource path="res://audio/voicelines/monster/dont_feed.ogg" type="AudioStream" id=23]
[ext_resource path="res://audio/voicelines/monster/you_must_be_brave.ogg" type="AudioStream" id=24]
[ext_resource path="res://audio/voicelines/monster/shut_up.ogg" type="AudioStream" id=25]
[ext_resource path="res://scenes/Monster/AudioPlayerConfig.gd" type="Script" id=26]

[sub_resource type="CubeMesh" id=2]
size = Vector3( 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.25, 0.25, 0.25 )

[node name="Monster" type="Area" groups=["monster"]]
collision_layer = 4
collision_mask = 2
script = ExtResource( 5 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
skeleton = NodePath("../..")
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 4 )

[node name="sfx_distant" type="Spatial" parent="."]
script = ExtResource( 26 )

[node name="doyouhearit" type="AudioStreamPlayer3D" parent="sfx_distant"]
stream = ExtResource( 2 )

[node name="can_you_feel_its_presence" type="AudioStreamPlayer3D" parent="sfx_distant"]
stream = ExtResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="it_is_hungry" type="AudioStreamPlayer3D" parent="sfx_distant"]
stream = ExtResource( 8 )
__meta__ = {
"_editor_description_": ""
}

[node name="where_is_the_light" type="AudioStreamPlayer3D" parent="sfx_distant"]
stream = ExtResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="you_must_be_brave" type="AudioStreamPlayer3D" parent="sfx_distant"]
stream = ExtResource( 24 )
__meta__ = {
"_editor_description_": ""
}

[node name="im_cold" type="AudioStreamPlayer3D" parent="sfx_distant"]
stream = ExtResource( 20 )
__meta__ = {
"_editor_description_": ""
}

[node name="i_cant_see" type="AudioStreamPlayer3D" parent="sfx_distant"]
stream = ExtResource( 12 )
__meta__ = {
"_editor_description_": ""
}

[node name="sfx_closer" type="Spatial" parent="."]

[node name="void" type="AudioStreamPlayer3D" parent="sfx_closer"]
stream = ExtResource( 17 )
attenuation_model = 3

[node name="gettingcloser" type="AudioStreamPlayer3D" parent="sfx_closer"]
stream = ExtResource( 3 )

[node name="dontfeedit" type="AudioStreamPlayer3D" parent="sfx_closer"]
stream = ExtResource( 23 )

[node name="scared" type="AudioStreamPlayer3D" parent="sfx_closer"]
stream = ExtResource( 22 )

[node name="inpain" type="AudioStreamPlayer3D" parent="sfx_closer"]
stream = ExtResource( 19 )

[node name="listen" type="AudioStreamPlayer3D" parent="sfx_closer"]
stream = ExtResource( 18 )

[node name="please" type="AudioStreamPlayer3D" parent="sfx_closer"]
stream = ExtResource( 14 )

[node name="comingtogetyou" type="AudioStreamPlayer3D" parent="sfx_closer"]
stream = ExtResource( 9 )

[node name="sfx_near" type="Spatial" parent="."]

[node name="itshere" type="AudioStreamPlayer3D" parent="sfx_near"]
stream = ExtResource( 1 )

[node name="cometome" type="AudioStreamPlayer3D" parent="sfx_near"]
stream = ExtResource( 21 )

[node name="pointless" type="AudioStreamPlayer3D" parent="sfx_near"]
stream = ExtResource( 16 )

[node name="run" type="AudioStreamPlayer3D" parent="sfx_near"]
stream = ExtResource( 4 )

[node name="despair" type="AudioStreamPlayer3D" parent="sfx_near"]
stream = ExtResource( 13 )

[node name="everythinghurts" type="AudioStreamPlayer3D" parent="sfx_near"]
stream = ExtResource( 15 )

[node name="dontwanttogoon" type="AudioStreamPlayer3D" parent="sfx_near"]
stream = ExtResource( 10 )

[node name="cantfeel" type="AudioStreamPlayer3D" parent="sfx_near"]
stream = ExtResource( 11 )

[node name="shutup" type="AudioStreamPlayer3D" parent="sfx_near"]
stream = ExtResource( 25 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="SfxDistantTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="SfxCloserTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="SfxNearTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Monster_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="SfxDistantTimer" to="." method="_on_SfxDistantTimer_timeout"]
[connection signal="timeout" from="SfxCloserTimer" to="." method="_on_SfxCloserTimer_timeout"]
[connection signal="timeout" from="SfxNearTimer" to="." method="_on_SfxNearTimer_timeout"]
